--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -3,115 +3,114 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundOrange"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
-    android:background="@color/backgroundOrange"
     tools:context="com.example.daniel.fitkeeper.LoginActivity">
 
-    <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/app_name"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="sans-serif-medium"
-        android:textSize="70sp"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <EditText
-                android:layout_width="298dp"
-                android:layout_height="40dp"
-                android:inputType="textEmailAddress"
-                android:hint="@string/prompt_email"
-                android:padding="5dp"
-                android:ems="10"
-                android:id="@+id/editTextMail"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/border"
-                android:layout_marginTop="150dp"/>
-
-            <EditText
-                android:layout_width="298dp"
-                android:layout_height="40dp"
-                android:inputType="textPassword"
-                android:hint="@string/prompt_password"
-                android:padding="5dp"
-                android:ems="10"
-                android:id="@+id/editTextPassword"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/border"
-                android:layout_marginTop="10dp"/>
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text=""
-                android:id="@+id/errorTxt"
-                android:layout_gravity="center_horizontal" />
-
-            <Button
-                android:layout_width="298dp"
-                android:layout_height="wrap_content"
-                android:text="@string/login_button"
-                android:id="@+id/loginBtn"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                android:background="@color/mainOrange"/>
+                android:fontFamily="sans-serif-medium"
+                android:text="@string/app_name"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="70sp" />
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/forgotPassBtn"
-                android:layout_gravity="right"
-                android:src="@drawable/ic_question_mark"
-                android:layout_marginTop="80dp"
-                android:layout_marginRight="20dp"
-                android:background="@color/mainOrange"/>
-        </LinearLayout>
-    </LinearLayout>
-    </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:orientation="horizontal">
 
-    <!--
-       <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:background="#3b5998"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_height="50dp"
-        android:layout_marginTop="37dp"
-        android:backgroundTint="@color/black"/>
-        -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/editTextMail"
+                        android:layout_width="298dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="150dp"
+                        android:background="@drawable/border"
+                        android:ems="10"
+                        android:hint="@string/prompt_email"
+                        android:inputType="textEmailAddress"
+                        android:padding="5dp" />
+
+                    <EditText
+                        android:id="@+id/editTextPassword"
+                        android:layout_width="298dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/border"
+                        android:ems="10"
+                        android:hint="@string/prompt_password"
+                        android:inputType="textPassword"
+                        android:padding="5dp" />
+
+                    <TextView
+                        android:id="@+id/errorTxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text=""
+                        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                    <Button
+                        android:id="@+id/loginBtn"
+                        android:layout_width="298dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="30dp"
+                        android:background="@drawable/button_bg_rounded_corners"
+                        android:text="@string/login_button"
+                        android:textColor="@color/black" />
+
+                    <ImageButton
+                        android:id="@+id/forgotPassBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="80dp"
+                        android:background="@drawable/button_bg_rounded_corners"
+                        android:src="@drawable/ic_question_mark" />
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
+
+        <!--
+           <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:background="#3b5998"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_height="50dp"
+            android:layout_marginTop="37dp"
+            android:backgroundTint="@color/black"/>
+            -->
 
     </ScrollView>
 </RelativeLayout>
