--- a/app/src/main/res/layout-land/activity_subscription.xml
+++ b/app/src/main/res/layout-land/activity_subscription.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundOrange"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
-    android:background="@color/backgroundOrange"
     tools:context="com.example.daniel.fitkeeper.SubscriptionActivity">
 
     <!--
@@ -27,8 +27,7 @@
     </android.support.v7.widget.Toolbar>
     -->
 
-    <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
@@ -36,77 +35,80 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/subscription_name"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="40sp"
-        android:id="@id/screenTxt"/>
+            <TextView
+                android:id="@id/screenTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/subscription_name"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="40sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/membership_plan_name"
-        android:id="@+id/membershipTxt"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/screenTxt"
-        android:layout_marginTop="54dp"
-        android:textSize="25sp"/>
+            <TextView
+                android:id="@+id/membershipTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/screenTxt"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="54dp"
+                android:text="@string/membership_plan_name"
+                android:textSize="25sp" />
 
-    <TextView
-        android:layout_width="250dp"
-        android:layout_height="30dp"
-        android:id="@+id/membershipEdtTxt"
-        android:layout_below="@+id/membershipTxt"
-        android:layout_alignStart="@+id/membershipTxt"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/border"
-        android:padding="5dp"/>
+            <TextView
+                android:id="@+id/membershipEdtTxt"
+                android:layout_width="250dp"
+                android:layout_height="30dp"
+                android:layout_alignStart="@+id/membershipTxt"
+                android:layout_below="@+id/membershipTxt"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/border"
+                android:padding="5dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/membership_last_day_name"
-        android:id="@+id/membershipLstDayTxt"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/membershipEdtTxt"
-        android:layout_below="@id/membershipEdtTxt"
-        android:textSize="25sp"/>
+            <TextView
+                android:id="@+id/membershipLstDayTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/membershipEdtTxt"
+                android:layout_below="@id/membershipEdtTxt"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="24dp"
+                android:text="@string/membership_last_day_name"
+                android:textSize="25sp" />
 
-    <TextView
-        android:layout_width="250dp"
-        android:layout_height="30dp"
-        android:inputType="date"
-        android:ems="10"
-        android:id="@+id/membershipLstDayEdtTxt"
-        android:layout_below="@+id/membershipLstDayTxt"
-        android:layout_alignStart="@+id/membershipLstDayTxt"
-        android:background="@drawable/border"
-        android:padding="5dp"/>
+            <TextView
+                android:id="@+id/membershipLstDayEdtTxt"
+                android:layout_width="250dp"
+                android:layout_height="30dp"
+                android:layout_alignStart="@+id/membershipLstDayTxt"
+                android:layout_below="@+id/membershipLstDayTxt"
+                android:background="@drawable/border"
+                android:ems="10"
+                android:inputType="date"
+                android:padding="5dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/membership_renew_button_name"
-        android:id="@+id/renewBtn"
-        android:layout_below="@id/membershipLstDayEdtTxt"
-        android:layout_centerHorizontal="true"
-         />
+            <Button
+                android:id="@+id/renewBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/membershipLstDayEdtTxt"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="54dp"
+                android:background="@drawable/button_bg_rounded_corners"
+                android:text="@string/membership_renew_button_name"
+                android:textColor="@color/black" />
 
-    <ImageButton
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:id="@+id/backBtn"
-        android:src="@drawable/ic_back_button"
-        android:background="@color/mainOrange"
-        android:layout_below="@id/renewBtn" />
+            <ImageButton
+                android:id="@+id/backBtn"
+                android:layout_width="70dp"
+                android:layout_height="50dp"
+                android:layout_below="@id/renewBtn"
+                android:background="@drawable/button_bg_rounded_corners"
+                android:src="@drawable/ic_back_button" />
 
-            </RelativeLayout>
+        </RelativeLayout>
     </ScrollView>
 
 </RelativeLayout>
