--- a/app/src/main/res/layout-large-land/activity_login.xml
+++ b/app/src/main/res/layout-large-land/activity_login.xml
@@ -3,95 +3,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundOrange"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
-    android:background="@color/backgroundOrange"
     tools:context="com.example.daniel.fitkeeper.LoginActivity">
 
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/app_name"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="sans-serif-medium"
-        android:textSize="70sp"
-        android:id="@+id/screenTxt"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/screenTxt">
+        <TextView
+            android:id="@+id/screenTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/app_name"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="70sp" />
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_below="@+id/screenTxt"
+            android:layout_centerHorizontal="true"
+            android:orientation="horizontal">
 
-            <EditText
-                android:layout_width="298dp"
-                android:layout_height="40dp"
-                android:inputType="textEmailAddress"
-                android:hint="@string/prompt_email"
-                android:padding="5dp"
-                android:ems="10"
-                android:id="@+id/editTextMail"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/border"
-                android:layout_marginTop="180dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <EditText
-                android:layout_width="298dp"
-                android:layout_height="40dp"
-                android:inputType="textPassword"
-                android:hint="@string/prompt_password"
-                android:padding="5dp"
-                android:ems="10"
-                android:id="@+id/editTextPassword"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/border"
-                android:layout_marginTop="10dp"/>
+                <EditText
+                    android:id="@+id/editTextMail"
+                    android:layout_width="298dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="180dp"
+                    android:background="@drawable/border"
+                    android:ems="10"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress"
+                    android:padding="5dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text=""
-                android:id="@+id/errorTxt"
-                android:layout_gravity="center_horizontal" />
+                <EditText
+                    android:id="@+id/editTextPassword"
+                    android:layout_width="298dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/border"
+                    android:ems="10"
+                    android:hint="@string/prompt_password"
+                    android:inputType="textPassword"
+                    android:padding="5dp" />
 
-            <Button
-                android:layout_width="298dp"
-                android:layout_height="wrap_content"
-                android:text="@string/login_button"
-                android:id="@+id/loginBtn"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                android:background="@color/mainOrange"/>
+                <TextView
+                    android:id="@+id/errorTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/forgotPassBtn"
-                android:layout_gravity="right"
-                android:src="@drawable/ic_question_mark"
-                android:layout_marginTop="80dp"
-                android:layout_marginRight="20dp"
-                android:background="@color/mainOrange"/>
+                <Button
+                    android:id="@+id/loginBtn"
+                    android:layout_width="298dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/button_bg_rounded_corners"
+                    android:text="@string/login_button"
+                    android:textColor="@color/black" />
+
+                <ImageButton
+                    android:id="@+id/forgotPassBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="80dp"
+                    android:background="@drawable/button_bg_rounded_corners"
+                    android:src="@drawable/ic_question_mark" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
     </RelativeLayout>
 
     <!--
