--- a/app/src/main/res/layout-large/activity_reset_password.xml
+++ b/app/src/main/res/layout-large/activity_reset_password.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundOrange"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
-    android:background="@color/backgroundOrange"
     tools:context="com.example.daniel.fitkeeper.ResetPasswordActivity">
 
     <!--
@@ -28,53 +28,56 @@
     -->
 
     <TextView
+        android:id="@+id/screenTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/reset_password_name"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="70sp"
-        android:id="@+id/screenTxt"/>
+        android:layout_gravity="center_horizontal"
+        android:text="@string/reset_password_name"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="70sp" />
 
     <EditText
+        android:id="@+id/emailEdtTxt"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:hint="@string/prompt_email"
-        android:padding="8dp"
-        android:inputType="textEmailAddress"
-        android:id="@+id/emailEdtTxt"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border"
+        android:hint="@string/prompt_email"
+        android:inputType="textEmailAddress"
+        android:padding="8dp" />
 
     <TextView
+        android:id="@+id/resultTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/resultTxt"
         android:layout_below="@+id/emailEdtTxt"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="" />
 
     <Button
+        android:id="@+id/sendBtn"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/send_button"
-        android:id="@+id/sendBtn"
+        android:layout_below="@+id/emailEdtTxt"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_below="@+id/emailEdtTxt"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:text="@string/send_button"
+        android:textColor="@color/black" />
 
     <ImageButton
+        android:id="@+id/backBtn"
         android:layout_width="70dp"
         android:layout_height="50dp"
-        android:id="@+id/backBtn"
-        android:src="@drawable/ic_back_button"
-        android:background="@color/mainOrange"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignStart="@+id/screenTxt"
+        android:layout_marginBottom="112dp"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:src="@drawable/ic_back_button" />
 
 
 </RelativeLayout>
