--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundOrange"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
-    android:background="@color/backgroundOrange"
     tools:context="com.example.daniel.fitkeeper.HomeActivity">
 
 
@@ -41,67 +41,76 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/app_name"
-        android:id="@+id/AppName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:textSize="50sp"/>
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="@string/user_info_button"
-        android:id="@+id/btnHome"
-        android:layout_below="@+id/AppName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="95dp" />
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="@string/workout_button"
-        android:id="@+id/btnWorkout"
-        android:layout_below="@+id/btnHome"
-        android:layout_alignStart="@+id/btnHome"
-        android:layout_marginTop="34dp" />
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="@string/subscription_button"
-        android:id="@+id/btnSubscription"
-        android:layout_below="@+id/btnWorkout"
-        android:layout_alignStart="@+id/btnWorkout"
-        android:layout_marginTop="33dp" />
-
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/settingsButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:src="@drawable/ic_settings_icon"
-        android:background="@color/mainOrange"/>
-
-    <!--<ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageButton2"
-        android:src="@drawable/ic_logout_icon"
-        android:layout_alignBottom="@+id/imageButton"
+        android:layout_height="fill_parent"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="20dp"
-        android:background="@color/mainOrange"/>
+        android:layout_alignParentTop="true">
 
-        COLOCAR BOTAO DE DESLOGAR DENTRO DAS CONFIGURAÇÕES!-->
+        <Button
+            android:id="@+id/btnHome"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/AppName"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="95dp"
+            android:background="@drawable/button_bg_rounded_corners"
+            android:text="@string/user_info_button"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/btnWorkout"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/btnHome"
+            android:layout_below="@+id/btnHome"
+            android:layout_marginTop="34dp"
+            android:background="@drawable/button_bg_rounded_corners"
+            android:text="@string/workout_button"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/btnSubscription"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/btnWorkout"
+            android:layout_below="@+id/btnWorkout"
+            android:layout_marginTop="33dp"
+            android:background="@drawable/button_bg_rounded_corners"
+            android:text="@string/subscription_button"
+            android:textColor="@color/black" />
+
+        <ImageButton
+            android:id="@+id/settingsButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/button_bg_rounded_corners"
+            android:src="@drawable/ic_settings_icon" />
+
+        <TextView
+            android:id="@+id/AppName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="43dp"
+            android:text="@string/app_name"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="50sp" />
+
+        <!--<ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageButton2"
+            android:src="@drawable/ic_logout_icon"
+            android:layout_alignBottom="@+id/imageButton"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="20dp"
+            android:background="@color/mainOrange"/>
+
+            COLOCAR BOTAO DE DESLOGAR DENTRO DAS CONFIGURAÇÕES!-->
 
     </RelativeLayout>
 
