--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundOrange"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
-    android:background="@color/backgroundOrange"
     tools:context="com.example.daniel.fitkeeper.SettingsActivity">
 
     <!--
@@ -28,90 +28,95 @@
     -->
 
     <TextView
+        android:id="@+id/screenTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/settings_name"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="40sp"
-        android:id="@+id/screenTxt"/>
+        android:layout_gravity="center_horizontal"
+        android:text="@string/settings_name"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="40sp" />
 
     <EditText
+        android:id="@+id/emailEdtTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/prompt_email"
-        android:padding="5dp"
-        android:inputType="textEmailAddress"
-        android:id="@+id/emailEdtTxt"
         android:layout_below="@+id/screenTxt"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border"
+        android:hint="@string/prompt_email"
+        android:inputType="textEmailAddress"
+        android:padding="5dp" />
 
     <EditText
+        android:id="@+id/crtPassEdtTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/current_password_name"
-        android:padding="5dp"
-        android:inputType="textPassword"
-        android:id="@+id/crtPassEdtTxt"
         android:layout_below="@+id/emailEdtTxt"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
         android:background="@drawable/border"
-        android:layout_marginTop="15dp"/>
+        android:hint="@string/current_password_name"
+        android:inputType="textPassword"
+        android:padding="5dp" />
 
     <EditText
+        android:id="@+id/newPassEdtTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/new_password_name"
-        android:padding="5dp"
-        android:inputType="textPassword"
-        android:id="@+id/newPassEdtTxt"
         android:layout_below="@+id/crtPassEdtTxt"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
         android:background="@drawable/border"
-        android:layout_marginTop="15dp"/>
+        android:hint="@string/new_password_name"
+        android:inputType="textPassword"
+        android:padding="5dp" />
 
     <EditText
+        android:id="@+id/rptPassEdtText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/repeat_password_name"
-        android:padding="5dp"
-        android:inputType="textPassword"
-        android:id="@+id/rptPassEdtText"
         android:layout_below="@+id/newPassEdtTxt"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
         android:background="@drawable/border"
-        android:layout_marginTop="15dp"/>
+        android:hint="@string/repeat_password_name"
+        android:inputType="textPassword"
+        android:padding="5dp" />
 
     <Button
+        android:id="@+id/saveBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/save_button_name"
-        android:id="@+id/saveBtn"
         android:layout_above="@+id/backBtn"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="49dp" />
+        android:layout_marginBottom="49dp"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:text="@string/save_button_name"
+        android:textColor="@color/black" />
 
     <Button
+        android:id="@+id/logoutBtn"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/logout_button_name"
-        android:id="@+id/logoutBtn"
+        android:layout_alignEnd="@+id/backBtn"
+        android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/saveBtn"
-        android:layout_alignParentStart="true" />
+        android:background="@drawable/button_bg_rounded_corners"
+        android:text="@string/logout_button_name"
+        android:textColor="@color/black" />
 
     <ImageButton
+        android:id="@+id/backBtn"
         android:layout_width="70dp"
         android:layout_height="50dp"
-        android:id="@+id/backBtn"
-        android:src="@drawable/ic_back_button"
-        android:background="@color/mainOrange"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:src="@drawable/ic_back_button" />
 
 
 </RelativeLayout>
